force-app/main/default/objects/PricingConditionSync__e/PricingConditionSync__e.object-meta.xml
<CustomObject>
    <description>Published when an Opportunity reaches Closed Won so MuleSoft can create SAP pricing conditions from AccountCondition and ProductCondition records.</description>
    <label>Pricing Condition Sync</label>
    <pluralLabel>Pricing Condition Syncs</pluralLabel>
</CustomObject>