force-app/main/default/objects/PricingConditionSync__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Account Id (Applicable Account) for which to create SAP pricing conditions.</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>