force-app/main/default/objects/PricingConditionSync__e/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>Salesforce Opportunity Id that reached Closed Won.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>