force-app/main/default/objects/PricingConditionSync__e/fields/PayloadJson__c.field-meta.xml
<CustomField>
    <fullName>PayloadJson__c</fullName>
    <description>JSON payload for MuleSoft: applicableAccount, accountCondition, productConditions. Used to create SAP A_SlsPrcgConditionRecord and to_SlsPrcgCndnRecdValidity.</description>
    <label>Payload Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>